# zppbits

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  annotated.html  annotated_dup.js  classes.html  classzpp_1_1bits_1_1basic__out-members.html  classzpp_1_1bits_1_1basic__out.html  classzpp_1_1bits_1_1bytes-members.html  classzpp_1_1bits_1_1bytes.html  classzpp_1_1bits_1_1in-members.html  classzpp_1_1bits_1_1in.html  classzpp_1_1bits_1_1out-members.html  classzpp_1_1bits_1_1out.html  conanfile.txt  concepts.html  concepts.js  conceptzpp_1_1bits_1_1concepts_1_1array.html  conceptzpp_1_1bits_1_1concepts_1_1associative__container.html  conceptzpp_1_1bits_1_1concepts_1_1basic__array.html  conceptzpp_1_1bits_1_1concepts_1_1bitset.html  conceptzpp_1_1bits_1_1concepts_1_1by__protocol.html  conceptzpp_1_1bits_1_1concepts_1_1byte__serializable.html  conceptzpp_1_1bits_1_1concepts_1_1byte__type.html  conceptzpp_1_1bits_1_1concepts_1_1byte__view.html  conceptzpp_1_1bits_1_1concepts_1_1container.html  conceptzpp_1_1bits_1_1concepts_1_1empty.html  conceptzpp_1_1bits_1_1concepts_1_1endian__aware__archive.html  conceptzpp_1_1bits_1_1concepts_1_1endian__independent__byte__serializable.html  conceptzpp_1_1bits_1_1concepts_1_1expected.html  conceptzpp_1_1bits_1_1concepts_1_1has__explicit__serialize.html  conceptzpp_1_1bits_1_1concepts_1_1has__fixed__nonzero__size.html  conceptzpp_1_1bits_1_1concepts_1_1has__protocol.html  conceptzpp_1_1bits_1_1concepts_1_1has__serialize.html  conceptzpp_1_1bits_1_1concepts_1_1inspection__guarded.html  conceptzpp_1_1bits_1_1concepts_1_1optional.html  conceptzpp_1_1bits_1_1concepts_1_1owning__pointer.html  conceptzpp_1_1bits_1_1concepts_1_1self__referencing.html  (+164 more)
src/: CMakeLists.txt  archive.cpp  concepts.cpp  core.cpp  io.cpp  numbers.cpp  options.cpp  protobuf.cpp  rpc.cpp  traits.cpp  varint.cpp  zpp_bits.cpp
tests/: CMakeLists.txt  test_alloc_limit.cpp  test_append.cpp  test_array.cpp  test_bitset.cpp  test_byte_serializable.cpp  test_complex.cpp  test_constexpr.cpp  test_data_sources.cpp  test_default_size_type.cpp  test_detect_members_serialize.cpp  test_endian.cpp  (+26 more)
(+42 files in other folders)
